yamls/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp
spec:
  selector:
    app: webapp
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
