yamls/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp
spec:
  rules:
    - host: localhost
      http:
        paths:
          - backend:
              service:
                name: webapp
                port:
                  name: http
            path: /
            pathType: Prefix
